Fix covering footer.  Add todo and about content.

--- a/css/main.scss
+++ b/css/main.scss
@@ -7,11 +7,19 @@
 // Main tag setup styles
 body {
     font-family: 'Ubuntu Mono', monospace;
-    margin-bottom: 60px;
+    
 }
 
 article {
     float: right;
+    
+}
+
+.main {
+    display: block;
+    clear: both;
+    min-height: 400px;
+    margin-bottom: 60px;
 }
 
 // Header
@@ -56,14 +64,13 @@ article {
     height: 60px;
     width: 100%;
     padding: 10px;
-    position: absolute;
     background-color: #4d4d4d;
     background: linear-gradient(#4d4d4d, #000);
     color: #808080;
     font-family: Helvetica, Verdana, sans-serif;
     font-size: 12px;
     letter-spacing: 1px;
-    bottom: 0;
+    clear: both;
 
 }
 
